--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -33,8 +33,8 @@ assets:
 # for each member, write your name and uid here
 # remove any empty "name+uid" entries
 members:
-  - name:
-    uid:
+  - name:Zice Yan
+    uid:u7389455
   - name:
     uid:
   - name:
