--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -35,8 +35,8 @@ assets:
 members:
   - name:Zice Yan
     uid:u7389455
-  - name:
-    uid:
+  - name:Xinyu WU
+    uid:u6441152
   - name:
     uid:
   - name:
