--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -37,7 +37,7 @@ members:
     uid:u7389455
   - name:Xinyu WU
     uid:u6441152
-  - name:
-    uid:
+  - name:Chenwei Niu
+    uid:u7377070
   - name:
     uid:
