--- a/Buy/app/src/main/AndroidManifest.xml
+++ b/Buy/app/src/main/AndroidManifest.xml
@@ -41,8 +41,8 @@
             android:name="com.example.buy.activity.MainActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
-<!--        <activity-->
-<!--            android:name="com.example.buy.activity.SearchActivity"-->
-<!--        </activity>-->
+        <activity
+            android:name="com.example.buy.activity.SearchActivity"
+        />
     </application>
 </manifest>
