--- a/Buy/app/src/main/AndroidManifest.xml
+++ b/Buy/app/src/main/AndroidManifest.xml
@@ -18,19 +18,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.buy.activity.MemberInfoActivity" />
+        <activity android:name="com.example.buy.activity.MessageActivity" />
+        <activity android:name="com.example.buy.activity.SearchFriendActivity" />
         <activity android:name="com.example.buy.activity.EditMemberInfoActivity" />
         <activity android:name="com.example.buy.activity.MyBaseActivity" />
         <activity android:name="com.example.buy.activity.RegisterActivity" />
-        <activity android:name="com.example.buy.activity.CreateBotanyActivity"/>
-        <activity android:name="com.example.buy.activity.BotanyDetailActivity"/>
-        <activity android:name="com.example.buy.activity.EditBotanyInfoActivity"/>
 
 
 
 
         <activity android:name="com.example.buy.activity.LoginActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
