--- a/Buy/app/build.gradle
+++ b/Buy/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.github.wildma:PictureSelector:2.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'org.apache.commons:commons-jexl3:3.2.1'
 
     // Required -- JUnit 4 framework
     testImplementation "junit:junit:4.13"
