--- a/Buy/app/build.gradle
+++ b/Buy/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.example.buy"
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -28,12 +29,15 @@ dependencies {
     implementation 'com.zhy:okhttputils:2.6.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.jcodecraeer:xrecyclerview:1.6.0'
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.6'
+    implementation 'junit:junit:4.12'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
@@ -42,4 +46,10 @@ dependencies {
     api 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.github.getActivity:XXPermissions:13.5'
     implementation 'com.github.wildma:PictureSelector:2.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'org.apache.commons:commons-jexl3:3.2.1'
+
+    // Required -- JUnit 4 framework
+    testImplementation "junit:junit:4.13"
 }
