--- a/Buy/app/src/main/AndroidManifest.xml
+++ b/Buy/app/src/main/AndroidManifest.xml
@@ -41,5 +41,6 @@
         <activity
             android:name="com.example.buy.activity.SearchActivity"
         />
+        <activity android:name="com.example.buy.activity.UploadCarActivity" />
     </application>
 </manifest>
